# open_env_hackathon

./: README.md  validate-submission.sh
incident-response-triage/: .gitignore  Dockerfile  ENVIRONMENT_DETAILED_FLOW.md  README.md  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  serve.py  server.py
incident-response-triage/server/: app.py
incident-response-triage/tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
