[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-response-triage"
version = "1.0.0"
description = "OpenEnv incident response triage environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.7.0",
  "openai>=2.7.2",
  "pyyaml==6.0.1",
  "requests==2.31.0",
  "httpx==0.27.2",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "serve:main"

[tool.setuptools]
py-modules = ["environment", "inference", "models", "server", "serve"]

[tool.setuptools.packages.find]
include = ["tasks*"]
